[gd_scene load_steps=23 format=3 uid="uid://bu6veqlwkcfph"]

[ext_resource type="Script" uid="uid://db18m8hfjkq7f" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://bv5anckcdn3ho" path="res://Assets/sprites-Sheet.png" id="1_v0iea"]
[ext_resource type="AudioStream" uid="uid://b8q0nsgscvok8" path="res://Assets/Sounds/thrust-start.mp3" id="2_f1ek2"]
[ext_resource type="Texture2D" uid="uid://dkxb0f22kuae3" path="res://Assets/Free Smoke Fx  Pixel 04.png" id="3_6t5aa"]
[ext_resource type="AudioStream" uid="uid://yybxqlj56mmv" path="res://Assets/Sounds/thrust-loop.mp3" id="3_tx1dd"]
[ext_resource type="AudioStream" uid="uid://dfvn4h2h5tmxw" path="res://Assets/Sounds/thrust-end.mp3" id="4_gymyn"]
[ext_resource type="Script" uid="uid://c5abm3cf7qfx" path="res://Scripts/shooting_system.gd" id="4_vgqql"]
[ext_resource type="Script" uid="uid://cxxi84dn27kth" path="res://Scripts/power_system.gd" id="5_fkybt"]
[ext_resource type="AudioStream" uid="uid://d33f6bqkt3l6h" path="res://Assets/Sounds/bomb_explosion.wav" id="5_pu2lt"]
[ext_resource type="AudioStream" uid="uid://dbbegadm3u5tj" path="res://Assets/Sounds/shoot.wav" id="9_tx1dd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("3_6t5aa")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("3_6t5aa")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_6t5aa")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_6t5aa")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_6t5aa")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("3_6t5aa")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0iea"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6t5aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": false,
"name": &"explode",
"speed": 32.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0iea")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0iea"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D"]
collision_mask = 10
script = ExtResource("1_cvnsp")
thurst_start_stream = ExtResource("2_f1ek2")
thurst_loop_stream = ExtResource("3_tx1dd")
thurst_end_stream = ExtResource("4_gymyn")
explosion_sound = ExtResource("5_pu2lt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6t5aa")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v0iea")

[node name="ShootingSystem" type="Node2D" parent="."]
script = ExtResource("4_vgqql")

[node name="MissleSpawnPoint" type="Marker2D" parent="ShootingSystem"]
position = Vector2(0, -8)

[node name="ShootingStreamPlayer" type="AudioStreamPlayer" parent="ShootingSystem"]
stream = ExtResource("9_tx1dd")

[node name="PowerSystem" type="Node" parent="."]
script = ExtResource("5_fkybt")

[node name="PowerDecreaseTimer" type="Timer" parent="PowerSystem"]
autostart = true

[node name="PowerIncreaseTimer" type="Timer" parent="PowerSystem"]
wait_time = 0.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="PowerSystem/PowerDecreaseTimer" to="PowerSystem" method="_on_power_decrease_timer_timeout"]
[connection signal="timeout" from="PowerSystem/PowerIncreaseTimer" to="PowerSystem" method="_on_power_increase_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
